observability/packages/victoria/manifests/fea/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: observability
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /victoria/logs
      backendRefs:
        - group: ""
          kind: Service
          name: victoria
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /victoria/metrics
      backendRefs:
        - group: ""
          kind: Service
          name: victoria
          port: 81
    - matches:
        - path:
            type: PathPrefix
            value: /victoria/traces
      backendRefs:
        - group: ""
          kind: Service
          name: victoria
          port: 82
